Начал прорабатывать WPF.

--- a/MVVMUtilsWrapper.Demo/MVVMUtilsWrapper.Demo.csproj
+++ b/MVVMUtilsWrapper.Demo/MVVMUtilsWrapper.Demo.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -112,7 +113,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\GRAPH_Feb12_193811.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MVVMUtilsWrapper\MVVMUtilsWrapper.csproj">
       <Project>{f5b5fec8-5ca6-467f-b3ad-00899f15e793}</Project>
