--- a/MVVMUtilsWrapper.Demo/MVVMUtilsWrapper.Demo.csproj
+++ b/MVVMUtilsWrapper.Demo/MVVMUtilsWrapper.Demo.csproj
@@ -56,6 +56,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\RelateWithUserControlsViewModel.cs" />
+    <Compile Include="View\PeopleCardView.xaml.cs">
+      <DependentUpon>PeopleCardView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\RelateWithUserControlsView.xaml.cs">
+      <DependentUpon>RelateWithUserControlsView.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\DevExpressIconsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -94,6 +101,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\PeopleCardView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\RelateWithUserControlsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
