Внёс изменения в логгер, необходимые для того, чтобы можно было анализировать связи между типами.

--- a/LogsWrapper.WPF.Tests/App.config
+++ b/LogsWrapper.WPF.Tests/App.config
@@ -31,9 +31,16 @@
       </layout>
 
     </appender>
+    <appender name="OutputAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+      
     <logger name="LOGGER">
       <appender-ref ref="LogFileAppender" />
       <appender-ref ref="LogFileAppenderExtention" />
+      <appender-ref ref="OutputAppender" />
     </logger>
   </log4net>
 </configuration>
