--- a/BogdanovUtilitisLib/BogdanovUtilitisLib.csproj
+++ b/BogdanovUtilitisLib/BogdanovUtilitisLib.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B23C3026-BD40-42FE-A987-225EA395887A}</ProjectGuid>
+    <ProjectGuid>{9690D6E0-D0C6-40FF-895B-BF93F11D4AC1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RoslynAnalyzerLib</RootNamespace>
-    <AssemblyName>RoslynAnalyzerLib</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>BogdanovUtilitisLib</RootNamespace>
+    <AssemblyName>BogdanovUtilitisLib</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
@@ -31,6 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GemBox.Spreadsheet, Version=45.0.35.1010, Culture=neutral, PublicKeyToken=b1b72c69714d4847, processorArchitecture=MSIL">
+      <HintPath>..\packages\GemBox.Spreadsheet.45.0.0.1010\lib\net35\GemBox.Spreadsheet.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,9 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SearchingType.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="LogsWrapper\Logger.cs" />
+    <Compile Include="LogsWrapper\SearchingType.cs" />
+    <Compile Include="LogsWrapper\TypesAnalyzer.cs" />
+    <Compile Include="MSILHandle\MSILHandler.cs" />
+    <Compile Include="MVVMUtilsWrapper\NotifyPropertyChanged.cs" />
+    <Compile Include="MVVMUtilsWrapper\RelayCommand.cs" />
+    <Compile Include="Office\Spreadsheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyntaxFactoryAnalyzer.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
