--- a/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
+++ b/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1F00F538-BD06-4B52-9097-328A0333C3DE}</ProjectGuid>
+    <ProjectGuid>{3CA03696-7864-443C-9624-D252966ADEBC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MVVMUtilsWrapper.Demo</RootNamespace>
-    <AssemblyName>MVVMUtilsWrapper.Demo</AssemblyName>
+    <RootNamespace>BogdanovCodeAnalyzer</RootNamespace>
+    <AssemblyName>BogdanovCodeAnalyzer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,10 +34,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -57,26 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModel\RelateWithUserControlsViewModel.cs" />
-    <Compile Include="View\PeopleCardView.xaml.cs">
-      <DependentUpon>PeopleCardView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\RelateWithUserControlsView.xaml.cs">
-      <DependentUpon>RelateWithUserControlsView.xaml</DependentUpon>
-    </Compile>
-    <Page Include="View\DevExpressIconsView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\DragAndDropView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\ListBoxView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\MainWindow.xaml">
+    <Page Include="View\MainWindowView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -84,32 +70,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Data\People.cs" />
-    <Compile Include="Model\ListBoxModel.cs" />
-    <Compile Include="ViewModel\DevExpressIconsViewModel.cs" />
-    <Compile Include="ViewModel\ListBoxViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
-    <Compile Include="View\DevExpressIconsView.xaml.cs">
-      <DependentUpon>DevExpressIconsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\DragAndDropView.xaml.cs">
-      <DependentUpon>DragAndDropView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\ListBoxView.xaml.cs">
-      <DependentUpon>ListBoxView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="View\MainWindowView.xaml.cs">
+      <DependentUpon>MainWindowView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\PeopleCardView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\RelateWithUserControlsView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -129,6 +94,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.manifest" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -138,11 +105,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\GRAPH_Feb12_193811.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\BogdanovCodeAnalyzer.Contracts\BogdanovCodeAnalyzer.Contracts.csproj">
+      <Project>{dee32f81-3eeb-437a-8639-372d7b21cab7}</Project>
+      <Name>BogdanovCodeAnalyzer.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BogdanovUtilitisLib\BogdanovUtilitisLib.csproj">
       <Project>{9690d6e0-d0c6-40ff-895b-bf93f11d4ac1}</Project>
       <Name>BogdanovUtilitisLib</Name>
