Добавил логгирование в catch, создал новый контрол под логгирование.

--- a/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
+++ b/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
@@ -120,6 +120,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="View\CoverCodeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\AnalyzeSqlDbView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -131,6 +135,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ViewModel\CoverCodeViewModel.cs" />
+    <Compile Include="View\CoverCodeView.xaml.cs">
+      <DependentUpon>CoverCodeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\AnalyzeSqlDbViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
