Изменения в работе с БД, с WCF.

--- a/BogdanovCodeAnalyzer.Contracts/App.config
+++ b/BogdanovCodeAnalyzer.Contracts/App.config
@@ -10,6 +10,30 @@
   <!--При развертывании проекта библиотеки службы необходимо добавить содержимое файла конфигурации в 
   файл app.config узла. Пространство имен System.Configuration не поддерживает файлы конфигурации для библиотек. -->
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="HttpServiceBaseEndPoint" />
+      </basicHttpBinding>
+      <netTcpBinding>
+        <binding name="ServiceBaseEndPoint">
+          <security>
+            <transport sslProtocols="None" />
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://localhost:7255/ServiceBaseContact"
+        binding="netTcpBinding" bindingConfiguration="ServiceBaseEndPoint"
+        contract="ContractServiceReference.IServiceBaseContract" name="ServiceBaseEndPoint">
+        <identity>
+          <userPrincipalName value="Богданов@eurotest.local" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:7256/ServiceBaseContact"
+        binding="basicHttpBinding" bindingConfiguration="HttpServiceBaseEndPoint"
+        contract="ContractServiceReference.IServiceBaseContract" name="HttpServiceBaseEndPoint" />
+    </client>
     <services>
       <service name="BogdanovCodeAnalyzer.Contracts.Service1">
         <endpoint address="" binding="basicHttpBinding" contract="BogdanovCodeAnalyzer.Contracts.IServiceBaseContract">
