--- a/BogdanovCodeAnalyzer.Contracts/BogdanovCodeAnalyzer.Contracts.csproj
+++ b/BogdanovCodeAnalyzer.Contracts/BogdanovCodeAnalyzer.Contracts.csproj
@@ -44,12 +44,45 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\ContractServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="IServiceBaseContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Connected Services\ContractServiceReference\ServiceBaseContact.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ContractServiceReference\ServiceBaseContact1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ContractServiceReference\ServiceBaseContract.wsdl" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ContractServiceReference\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ContractServiceReference\ServiceBaseContact.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ContractServiceReference\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ContractServiceReference\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ContractServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
