--- a/BogdanovCodeAnalyzer.Client/App.config
+++ b/BogdanovCodeAnalyzer.Client/App.config
@@ -5,9 +5,11 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="HttpServiceBaseEndPoint" />
-            </basicHttpBinding>
+            <netNamedPipeBinding>
+                <binding name="NetNamedPipeBinding_ITest">
+                    <security mode="None" />
+                </binding>
+            </netNamedPipeBinding>
             <netTcpBinding>
                 <binding name="ServiceBaseEndPoint">
                     <security>
@@ -19,16 +21,14 @@
         <client>
             <endpoint address="net.tcp://localhost:7255/ServiceBaseContact"
                 binding="netTcpBinding" bindingConfiguration="ServiceBaseEndPoint"
-                contract="ContractServiceReference.IServiceBaseContract"
-                name="ServiceBaseEndPoint">
+                contract="ContractServiceReference.IServiceBaseContract" name="ServiceBaseEndPoint">
                 <identity>
                     <userPrincipalName value="Богданов@eurotest.local" />
                 </identity>
             </endpoint>
-            <!--<endpoint address="http://localhost:7256/ServiceBaseContact"
-                binding="basicHttpBinding" bindingConfiguration="HttpServiceBaseEndPoint"
-                contract="ServiceReferenceCodeAnalyzer.IServiceBaseContract"
-                name="HttpServiceBaseEndPoint" />-->
+            <endpoint address="net.pipe://localhost/wcfsamples/test" binding="netNamedPipeBinding"
+                bindingConfiguration="NetNamedPipeBinding_ITest" contract="ServiceReferenceCodeAnalyzer.ITest"
+                name="NetNamedPipeBinding_ITest" />
         </client>
     </system.serviceModel>
 </configuration>
