--- a/BogdanovCodeAnalyzer.Client/BogdanovCodeAnalyzer.Client.csproj
+++ b/BogdanovCodeAnalyzer.Client/BogdanovCodeAnalyzer.Client.csproj
@@ -93,13 +93,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\ServiceBaseContact.xsd">
+    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\Program.wsdl" />
+    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\wcfsamples.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\ServiceBaseContact1.xsd">
+    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\wcfsamples1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\ServiceBaseContract.wsdl" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -119,9 +119,6 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\ServiceReferenceCodeAnalyzer\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\ServiceReferenceCodeAnalyzer\ServiceBaseContact.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\ServiceReferenceCodeAnalyzer\configuration91.svcinfo" />
