Сделал соединение через каналы wcf

--- a/BogdanovCodeAnalyzer.Client/App.config
+++ b/BogdanovCodeAnalyzer.Client/App.config
@@ -3,32 +3,46 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-    <system.serviceModel>
-        <bindings>
-            <netNamedPipeBinding>
-                <binding name="NetNamedPipeBinding_ITest">
-                    <security mode="None" />
-                </binding>
-            </netNamedPipeBinding>
-            <netTcpBinding>
-                <binding name="ServiceBaseEndPoint">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
-            </netTcpBinding>
-        </bindings>
-        <client>
-            <endpoint address="net.tcp://localhost:7255/ServiceBaseContact"
-                binding="netTcpBinding" bindingConfiguration="ServiceBaseEndPoint"
-                contract="ContractServiceReference.IServiceBaseContract" name="ServiceBaseEndPoint">
-                <identity>
-                    <userPrincipalName value="Богданов@eurotest.local" />
-                </identity>
-            </endpoint>
-            <endpoint address="net.pipe://localhost/wcfsamples/test" binding="netNamedPipeBinding"
-                bindingConfiguration="NetNamedPipeBinding_ITest" contract="ServiceReferenceCodeAnalyzer.ITest"
-                name="NetNamedPipeBinding_ITest" />
-        </client>
-    </system.serviceModel>
+  <system.serviceModel>
+    <bindings>
+      <netNamedPipeBinding>
+        <binding name="NetNamedPipeBinding_IServiceBaseContract">
+          <security mode="None" />
+        </binding>
+      </netNamedPipeBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.pipe://localhost/logs/ServiceBaseContract"
+        binding="netNamedPipeBinding" bindingConfiguration="NetNamedPipeBinding_IServiceBaseContract"
+        contract="ContractServiceReference.IServiceBaseContract" name="NetNamedPipeBinding_IServiceBaseContract" />
+    </client>
+    <services>
+      <service name="BogdanovCodeAnalyzer.Contracts.Service1">
+        <endpoint address="" binding="basicHttpBinding" contract="BogdanovCodeAnalyzer.Contracts.IServiceBaseContract">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/BogdanovCodeAnalyzer.Contracts/Service1/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <!--Чтобы избежать раскрытия метаданных, 
+          до развертывания задайте следующим параметрам значение "false".-->
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <!-- Чтобы получить сведения об исключениях в ошибках для отладки, 
+          установите ниже значение TRUE. Перед развертыванием установите значение FALSE, 
+           чтобы избежать разглашения сведений об исключении -->
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
