--- a/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
+++ b/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
@@ -120,6 +120,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\RemotingProgramsLogsViewModel.cs" />
+    <Compile Include="View\RemotingProgramsLogsView.xaml.cs">
+      <DependentUpon>RemotingProgramsLogsView.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\CoverCodeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -149,6 +153,10 @@
       <DependentUpon>MainWindowView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\RemotingProgramsLogsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
