--- a/BogdanovCodeAnalyzer.Contracts/App.config
+++ b/BogdanovCodeAnalyzer.Contracts/App.config
@@ -11,28 +11,16 @@
   файл app.config узла. Пространство имен System.Configuration не поддерживает файлы конфигурации для библиотек. -->
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="HttpServiceBaseEndPoint" />
-      </basicHttpBinding>
-      <netTcpBinding>
-        <binding name="ServiceBaseEndPoint">
-          <security>
-            <transport sslProtocols="None" />
-          </security>
+      <netNamedPipeBinding>
+        <binding name="NetNamedPipeBinding_IServiceBaseContract">
+          <security mode="None" />
         </binding>
-      </netTcpBinding>
+      </netNamedPipeBinding>
     </bindings>
     <client>
-      <endpoint address="net.tcp://localhost:7255/ServiceBaseContact"
-        binding="netTcpBinding" bindingConfiguration="ServiceBaseEndPoint"
-        contract="ContractServiceReference.IServiceBaseContract" name="ServiceBaseEndPoint">
-        <identity>
-          <userPrincipalName value="Богданов@eurotest.local" />
-        </identity>
-      </endpoint>
-      <endpoint address="http://localhost:7256/ServiceBaseContact"
-        binding="basicHttpBinding" bindingConfiguration="HttpServiceBaseEndPoint"
-        contract="ContractServiceReference.IServiceBaseContract" name="HttpServiceBaseEndPoint" />
+      <endpoint address="net.pipe://localhost/logs/ServiceBaseContract"
+        binding="netNamedPipeBinding" bindingConfiguration="NetNamedPipeBinding_IServiceBaseContract"
+        contract="ContractServiceReference.IServiceBaseContract" name="NetNamedPipeBinding_IServiceBaseContract" />
     </client>
     <services>
       <service name="BogdanovCodeAnalyzer.Contracts.Service1">
