--- a/BogdanovCodeAnalyzer/App.config
+++ b/BogdanovCodeAnalyzer/App.config
@@ -8,7 +8,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 
-  <system.serviceModel>
+  <!--<system.serviceModel>
     <bindings>
       <netTcpBinding>
         <binding name="TcpBinging">
@@ -48,7 +48,7 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-  </system.serviceModel>
+  </system.serviceModel>-->
   
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
