--- a/BogdanovCodeAnalyzer.Contracts/App.config
+++ b/BogdanovCodeAnalyzer.Contracts/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true"/>
   </system.web>
   <!--При развертывании проекта библиотеки службы необходимо добавить содержимое файла конфигурации в 
   файл app.config узла. Пространство имен System.Configuration не поддерживает файлы конфигурации для библиотек. -->
@@ -13,26 +13,24 @@
     <bindings>
       <netNamedPipeBinding>
         <binding name="NetNamedPipeBinding_IServiceBaseContract">
-          <security mode="None" />
+          <security mode="None"/>
         </binding>
       </netNamedPipeBinding>
     </bindings>
     <client>
-      <endpoint address="net.pipe://localhost/logs/ServiceBaseContract"
-        binding="netNamedPipeBinding" bindingConfiguration="NetNamedPipeBinding_IServiceBaseContract"
-        contract="ContractServiceReference.IServiceBaseContract" name="NetNamedPipeBinding_IServiceBaseContract" />
+      <endpoint address="net.pipe://localhost/logs/ServiceBaseContract" binding="netNamedPipeBinding" bindingConfiguration="NetNamedPipeBinding_IServiceBaseContract" contract="ContractServiceReference.IServiceBaseContract" name="NetNamedPipeBinding_IServiceBaseContract"/>
     </client>
     <services>
       <service name="BogdanovCodeAnalyzer.Contracts.Service1">
         <endpoint address="" binding="basicHttpBinding" contract="BogdanovCodeAnalyzer.Contracts.IServiceBaseContract">
           <identity>
-            <dns value="localhost" />
+            <dns value="localhost"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/BogdanovCodeAnalyzer.Contracts/Service1/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/BogdanovCodeAnalyzer.Contracts/Service1/"/>
           </baseAddresses>
         </host>
       </service>
@@ -46,10 +44,10 @@
           <!-- Чтобы получить сведения об исключениях в ошибках для отладки, 
           установите ниже значение TRUE. Перед развертыванием установите значение FALSE, 
            чтобы избежать разглашения сведений об исключении -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceDebug includeExceptionDetailInFaults="False"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
