--- a/BogdanovCodeAnalyzer/App.config
+++ b/BogdanovCodeAnalyzer/App.config
@@ -75,7 +75,7 @@
     </appender>
     <logger name="LOGGER">
       <appender-ref ref="LogFileAppender" />
-      <appender-ref ref="LogFileAppenderExtention" />
+      <!--<appender-ref ref="LogFileAppenderExtention" />-->
     </logger>
   </log4net>
 </configuration>
