--- a/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
+++ b/BogdanovCodeAnalyzer/BogdanovCodeAnalyzer.csproj
@@ -120,14 +120,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\AnalyzeCodeViewModel.cs" />
     <Compile Include="ViewModel\AnalyzeLogsViewModel.cs" />
     <Compile Include="ViewModel\RemotingProgramsLogsViewModel.cs" />
+    <Compile Include="View\AnalyzeCodeView.xaml.cs">
+      <DependentUpon>AnalyzeCodeView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\AnalyzeLogsView.xaml.cs">
       <DependentUpon>AnalyzeLogsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\RemotingProgramsLogsView.xaml.cs">
       <DependentUpon>RemotingProgramsLogsView.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\AnalyzeCodeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\AnalyzeLogsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
