--- a/MVVMUtilsWrapper.Demo/MVVMUtilsWrapper.Demo.csproj
+++ b/MVVMUtilsWrapper.Demo/MVVMUtilsWrapper.Demo.csproj
@@ -63,10 +63,14 @@
     <Compile Include="Controls\CircleButton.xaml.cs">
       <DependentUpon>CircleButton.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\ListBoxSimpleGroupingViewModel.cs" />
     <Compile Include="ViewModel\RelateWithUserControlsViewModel.cs" />
     <Compile Include="ViewModel\TreeViewExamplesviewModel.cs" />
     <Compile Include="View\CustomContorlsView.xaml.cs">
       <DependentUpon>CustomContorlsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ListBoxSimpleGroupingView.xaml.cs">
+      <DependentUpon>ListBoxSimpleGroupingView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\PeopleCardView.xaml.cs">
       <DependentUpon>PeopleCardView.xaml</DependentUpon>
@@ -94,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\DragAndDropView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ListBoxSimpleGroupingView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
