--- a/SqlAnalyzer/SqlAnalyzer.csproj
+++ b/SqlAnalyzer/SqlAnalyzer.csproj
@@ -68,6 +68,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\Column.cs" />
+    <Compile Include="Data\RepeatingColumn.cs" />
     <Compile Include="Models\SearchColumnsAbstractModel.cs" />
     <Compile Include="Models\SearchColumnsServerModel.cs" />
     <Compile Include="Models\SearchColumnsTest1Model.cs" />
